--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,17 +9,26 @@ h1, h2, h3, h4, h5 {
   text-align: center;
 }
 
+.dark .h2 {
+  color: var(--neutral-100);
+}
+
 .btn {
   padding: 0.6rem 1.8rem;
   border: none;
   border-radius: 4px;
   font-weight: 500;
   font-size: 1.1rem;
+  cursor: pointer;
 }
 
 .btn-primary {
   background-color: var(--primary-500);
   color: var(--neutral-100);
+}
+
+.btn-primary:hover {
+  background-color: var(--primary-400);
 }
 
 .btn-block {
@@ -33,9 +42,17 @@ h1, h2, h3, h4, h5 {
   border-radius: 4px;
 }
 
+.dark .form-div {
+  background-color: var(--neutral-700);
+}
+
 .form-input::placeholder {
   color: var(--neutral-500);
   font-weight: 600;
+}
+
+.dark .form-input::placeholder {
+  color: var(--neutral-400);
 }
 
 .form-input {
@@ -44,4 +61,8 @@ h1, h2, h3, h4, h5 {
   outline: none;
   font-weight: 500;
   font-size: 1.1rem;
+}
+
+.dark .form-input {
+  color: var(--neutral-100);
 }
