added theme toggle switch

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,12 @@ h1, h2, h3, h4, h5 {
   color: var(--neutral-100);
 }
 
+.h-center {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .btn {
   padding: 0.6rem 1.8rem;
   border: none;
