--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -53,6 +53,14 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body {
+  background-color: var(--neutral-100);
+}
+
+body.dark {
+  background-color: var(--neutral-900);
+}
+
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
