--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,16 @@ h1, h2, h3, h4, h5 {
   margin: 0.7rem 0;
 }
 
+hr {
+  width: 75%;
+  color: var(--neutral-700);
+  font-weight: 300;
+}
+
+.dark hr {
+  color: var(--neutral-300);
+}
+
 .h2 {
   font-weight: 700;
   font-size: 2rem;
@@ -19,6 +29,28 @@ h1, h2, h3, h4, h5 {
   justify-content: center;
 }
 
+.menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  color: var(--neutral-900);
+  text-decoration: none;
+  border-radius: 4px;
+  column-gap: 1rem;
+}
+
+.dark .menu {
+  color: var(--neutral-100);
+}
+
+.menu:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.menu:active {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
 .btn {
   padding: 0.6rem 1.8rem;
   border: none;
@@ -32,6 +64,9 @@ h1, h2, h3, h4, h5 {
   padding: 0.3rem 0.4rem;
   cursor: pointer;
   border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-icon:hover {
@@ -144,4 +179,10 @@ h1, h2, h3, h4, h5 {
 
 .dropdown > ul > li > a:active {
   background-color: rgba(0, 0, 0, 0.6);
+}
+
+@media only screen and (min-width: 768px) {
+  .md\:hidden {
+    display: none !important;
+  }
 }
