--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -9,6 +9,7 @@
 .login-column {
   max-width: 36rem;
   min-height: 100vh;
+  padding: 0 0.5rem;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
