--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,6 +197,14 @@ hr {
   background-color: var(--neutral-700);
 }
 
+.form-error {
+  outline: 2px solid var(--danger-400);
+}
+
+.dark .form-error {
+  outline-color: var(--danger-600);
+}
+
 .form-input::placeholder {
   color: var(--neutral-500);
   font-weight: 600;
@@ -375,6 +383,13 @@ textarea.form-input {
 .modal > .card {
   max-width: 768px;
   width: 100%;
+}
+
+.text-error {
+  font-weight: 400;
+  font-size: 0.8rem;
+  padding: 0;
+  margin: 0 0.5rem;
 }
 
 @media only screen and (min-width: 768px) {
